tests/invalid/runtime/module_badver.pts
import test.badver.{ping};

function main() : void {
    ping();
}
